left side of inner html is no longer clipped by small windows

--- a/embed.css
+++ b/embed.css
@@ -7,6 +7,9 @@ body {
 }
 
 .outer {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-content: center;
